# valheim-server

./: BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  entrypoint.sh  renovate.json  run_local.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml  main.yml  publish.yml  renovate.yml  test.yml
