module(name = "satisfactory_server")

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_distroless", version = "0.5.3")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_steam", version = "0.0.0")

git_override(
    module_name = "rules_steam",
    commit = "f23618fd056c37fb2283445c0a3f28cec82d17c2",
    remote = "https://github.com/lanofdoom/rules_steam.git",
)

steam = use_extension("@rules_steam//:steam.bzl", "steam")
steam.app(
    name = "valheim",
    app = "896660",  # valheim
)
use_repo(steam, "valheim")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "debian",
    image = "docker.io/library/debian",
    platforms = ["linux/amd64"],
    tag = "bookworm-slim",
)
use_repo(oci, "debian", "debian_linux_amd64")
